Fixed overflow and height issues

--- a/src/components/container/container.scss
+++ b/src/components/container/container.scss
@@ -72,12 +72,13 @@ h1, h2, h3 {
 
   @media screen and (max-width: 1280px) {
       & {
-        height: 6%;
+        height: 108px;
       }
     }
 }
 
 #movies-wrapper {
   height: 80%;
-  overflow: scroll;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
